works app refactors