@@ -5,12 +5,39 @@ import Keys._
 // Copyright 2016 Sam Halliday
 // Licence: http://www.apache.org/licenses/LICENSE-2.0
 
-/**
- * A bunch of sensible defaults
- */
-object Sensible {
+import com.github.fedragon.todolist.TodoListPlugin.autoImport._
+import com.lihaoyi.workbench.Plugin._
 
-  // shellPrompt in ThisBuild := { s: State =>
+trait LibVersions {
+  val scalazVersion       = "7.2.6"
+  val scalaTagsVersion    = "0.6.2"
+  val scalaAsyncVersion   = "0.9.6-RC6"
+  val scalaModulesVersion = "1.0.4"
+  val akkaVersion         = "2.3.14"
+  val streamsVersion      = "1.0"
+  val scalatestVersion    = "3.0.0"
+  val logbackVersion      = "1.7.21"
+  val quasiquotesVersion  = "2.0.1"
+  val guavaVersion        = "18.0"
+  val specs2Version       = "3.7"
+
+}
+
+object LibVersions extends LibVersions
+
+object LogLibs extends LibVersions {
+  val logback = Seq(
+    "ch.qos.logback" % "logback-classic" % "1.1.7",
+    "org.slf4j" % "slf4j-api" % logbackVersion,
+    "org.slf4j" % "jul-to-slf4j" % logbackVersion,
+    "org.slf4j" % "jcl-over-slf4j" % logbackVersion
+  )
+}
+
+object TestLibs extends LibVersions {
+}
+
+object ThisBuildDefault {
   def colorPrompt = { s: State =>
     val c = scala.Console
     val blue = c.RESET + c.BLUE + c.BOLD
@@ -21,18 +48,27 @@ object Sensible {
   }
 
 
-  import com.github.fedragon.todolist.TodoListPlugin.autoImport._
-
   lazy val settings =  Seq(
-    autoCompilerPlugins := true,
 
-    // addCompilerPlugin("com.lihaoyi" %% "acyclic" % "0.1.4"),
+    resolvers in ThisBuild ++= List(
+      "IESL Public Releases" at "https://dev-iesl.cs.umass.edu/nexus/content/groups/public",
+      "Sonatype OSS Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots",
+      Resolver.jcenterRepo
+    ),
 
-    ivyLoggingLevel := UpdateLogging.Quiet,
+    scalaVersion in ThisBuild := "2.11.8",
 
-    todosTags := Set("FIXME", "TODO", "WIP", "XXX", "\\?\\?\\?"),
+    shellPrompt in ThisBuild := colorPrompt,
 
-    scalacOptions in Compile ++= Seq(
+    autoCompilerPlugins in ThisBuild := true,
+
+    addCompilerPlugin("com.lihaoyi" %% "acyclic" % "0.1.5"),
+
+    ivyLoggingLevel in ThisBuild := UpdateLogging.Quiet,
+
+    todosTags in ThisBuild := Set("FIXME", "TODO", "WIP", "XXX", "\\?\\?\\?"),
+
+    scalacOptions in ThisBuild ++= Seq(
       "-encoding", "UTF-8",
       "-target:jvm-1.6",
       "-feature",
@@ -47,11 +83,10 @@ object Sensible {
       "-Ywarn-inaccessible",
       "-Ywarn-dead-code",
       "-Xfuture"
-
-      // "-Ywarn-unused-import", // noisy, but good to run occasionally
-      // "-Xcheckinit", // runtime error when a val is not initialized due to trait hierarchies (instead of NPE somewhere else)
-      // "-Ywarn-value-discard", // Warn when non-Unit expression results are unused
-      //"-Ywarn-numeric-widen", // noisy
+        // "-Ywarn-unused-import", // noisy, but good to run occasionally
+        // "-Xcheckinit", // runtime error when a val is not initialized due to trait hierarchies (instead of NPE somewhere else)
+        // "-Ywarn-value-discard", // Warn when non-Unit expression results are unused
+        //"-Ywarn-numeric-widen", // noisy
     ),
 
     javacOptions in (Compile, compile) ++= Seq(
@@ -60,15 +95,41 @@ object Sensible {
     ),
     javacOptions in doc ++= Seq("-source", "1.6"),
 
-    javaOptions := Seq("-Xss2m", "-Xms1g", "-Xmx1g"),
-    javaOptions += "-Dfile.encoding=UTF8",
-    // javaOptions ++= Seq("-XX:+UseConcMarkSweepGC"),
+    javaOptions := Seq(
+      "-Xss2m", "-Xms1g", "-Xmx1g", "-Dfile.encoding=UTF8"
+    ),
 
-    // maxErrors := 1,
-    // fork := true,
+    // 4 x 1GB = 4GB
+    concurrentRestrictions in Global := Seq(Tags.limitAll(4))
+
+  )
+
+}
+
+
+object Sensible extends LibVersions {
+
+
+
+  lazy val settings =  Seq(
+
+
+    // addCompilerPlugin("com.lihaoyi" %% "acyclic" % "0.1.4"),
+
+
+    javacOptions in (Compile, compile) ++= Seq(
+      "-source", "1.6", "-target", "1.6", "-Xlint:all", "-Werror",
+      "-Xlint:-options", "-Xlint:-path", "-Xlint:-processing"
+    ),
+    javacOptions in doc ++= Seq("-source", "1.6"),
+
+    javaOptions := Seq(
+      "-Xss2m", "-Xms1g", "-Xmx1g", "-Dfile.encoding=UTF8"
+    ),
 
     // 4 x 1GB = 4GB
     concurrentRestrictions in Global := Seq(Tags.limitAll(4)),
+
 
     dependencyOverrides ++= Set(
       "org.scala-lang" % "scala-compiler" % scalaVersion.value,
@@ -78,14 +139,14 @@ object Sensible {
       "org.scala-lang.modules" %% "scala-xml" % scalaModulesVersion,
       "org.scala-lang.modules" %% "scala-parser-combinators" % scalaModulesVersion,
       "org.scalamacros" %% "quasiquotes" % quasiquotesVersion
-    ) ++ logback
+    ) ++ LogLibs.logback
   ) ++ inConfig(Test)(testSettings)
 
   def testSettings = Seq(
     parallelExecution := true,
 
     // one JVM per test suite
-    fork := true,
+    // fork := true,
     testForkedParallel := true,
     testGrouping <<= (
       definedTests,
@@ -115,37 +176,6 @@ object Sensible {
     testOptions in Test += Tests.Argument(TestFrameworks.ScalaCheck, "-maxSize", "5", "-minSuccessfulTests", "33", "-workers", "1", "-verbosity", "1"),
     testFrameworks := Seq(TestFrameworks.ScalaTest, TestFrameworks.ScalaCheck)
   )
-
-  val scalaModulesVersion = "1.0.4"
-  val akkaVersion = "2.3.14"
-  val streamsVersion = "1.0"
-  val scalatestVersion = "3.0.0"
-  val logbackVersion = "1.7.21"
-  val quasiquotesVersion = "2.0.1"
-  val guavaVersion = "18.0"
-
-  val macroParadise = Seq(
-    compilerPlugin("org.scalamacros" % "paradise" % "2.0.1" cross CrossVersion.full)
-  )
-  def shapeless(scalaVersion: String) = {
-    if (scalaVersion.startsWith("2.10.")) macroParadise
-    else Nil
-  } :+ "com.chuusai" %% "shapeless" % "2.2.5"
-  val logback = Seq(
-    "ch.qos.logback" % "logback-classic" % "1.1.7",
-    "org.slf4j" % "slf4j-api" % logbackVersion,
-    "org.slf4j" % "jul-to-slf4j" % logbackVersion,
-    "org.slf4j" % "jcl-over-slf4j" % logbackVersion
-  )
-  val guava = Seq(
-    "com.google.guava" % "guava" % guavaVersion,
-    "com.google.code.findbugs" % "jsr305" % "3.0.1" % "provided"
-  )
-
-  def testLibs(config: String = "test") = Seq(
-    "org.scalatest" %% "scalatest" % scalatestVersion % config
-  ) ++ logback.map(_ % config)
-
 
   // WORKAROUND: https://github.com/scalatest/scalatest/issues/511
   def noColorIfEmacs =
